# bti-exercises

./: README.md
2018.2-ITP/lista01/: q11.c  q14.c  q16.c
2018.2-ITP/lista02/: q11.c  q5.c  q6.c  q7.c
2018.2-ITP/lista03/: q10.c  q3.c  q5.c  q6.c
2018.2-ITP/lista04/: q1-0.c  q3-1.c  q5.c
2018.2-ITP/lista05/: q3.c  q5.c
2018.2-ITP/lista06/: q4.c  q5.c  q6.c  q7.c
2018.2-ITP/lista07/: q1.c  q10.c  q3.c  q4.c  q6.c
2018.2-ITP/lista08/: q2.c  q4.c  q7.c
2018.2-ITP/lista09/: classificacao.txt  q2.c  q6.txt
2018.2-ITP/lista10/data_example/: main.c
2018.2-ITP/lista10/q1/: q1.c
2018.2/ITP/exercises/01.intro/: q12.c  q13.c  q8.c  q9.c
2018.2/ITP/exercises/02.conditionals/: q1.c  q3.c  q9.c
2018.2/ITP/exercises/03.loops/: q16.c  q4.c  q7.c  q8.c  q9.c
2018.2/ITP/exercises/04.functions/: q1-1.c  q2-0.c  q3-0.c
2018.2/ITP/exercises/05.arrays/: q2.c  q6.c  q7.c
2018.2/ITP/exercises/06.n-loops/: q9.c
2018.2/ITP/exercises/07.strings/: q2.c  q8.c  q9.c
2018.2/ITP/exercises/08.pointers/: q5.c  q8.c
2019.1-LP.I/00.lista/01.half/: main.cpp
2019.1-LP.I/00.lista/02.flights/: main.cpp
2019.1-LP.I/00.lista/04.array/: main.cpp
2019.1/EDB_I/class/03.empirical-analysis/filter-selan/: CMakeLists.txt  README.md
2019.1/EDB_I/class/03.empirical-analysis/filter-selan/data/: tempos.txt  tempos2.txt
2019.1/EDB_I/class/03.empirical-analysis/filter-selan/docs/html/: dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  index.html  md__c_h_a_n_g_e_l_o_g.html  md__r_e_a_d_m_e.html  menudata.js  namespaceft.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  pages.html
2019.1/EDB_I/class/03.empirical-analysis/filter-selan/docs/html/search/: all_2.js  all_3.js  functions_0.js  pages_0.js  searchdata.js
2019.1/EDB_I/class/03.empirical-analysis/filter-selan/docs/latex/: dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  md__c_h_a_n_g_e_l_o_g.tex  md__r_e_a_d_m_e.tex  namespaceft.tex  namespaces.tex  refman.tex
2019.1/EDB_I/class/03.empirical-analysis/filter-selan/include/: filter.h
2019.1/EDB_I/class/03.empirical-analysis/filter-selan/src/: filter.cpp  timing_filter.cpp
2019.1/EDB_I/class/03.empirical-analysis/filter-selan/test/: filter_lin_test.cpp  filter_quad_test.cpp
2019.1/EDB_I/class/05.search/lower-upper/: CMakeLists.txt  README.md
2019.1/EDB_I/class/05.search/lower-upper/include/: bsearch.h
2019.1/EDB_I/class/05.search/lower-upper/src/: app.cpp
2019.1/EDB_I/class/05.search/lower-upper/test/: bs_tests.cpp  lb_test.cpp
2019.1/EDB_I/class/12.order/sorted_insert/: CMakeLists.txt  README.md  sorted_insert.cpp
2019.1/LP_I/int-ranges/app_source/: CMakeLists.txt
2019.1/LP_I/int-ranges/app_source/src/: driver.cpp
2020.2/operating-systems/03-fork/: 01.fork.c  02.fork.c  03.fork.c  06.fork.c  1.1.trabalho  fork  trabalho
2020.2/operating-systems/fork()/: 04.fork.c  05.fork.c  07.fork.c  1.1.trabalho.c
2020.2/operating-systems/process-comunication/: 08.shared_memory.c  09.shared_memory.c  10.fork_unipipes.c  11.fork_bipipes.c
2020.2/operating-systems/threads/: -g  .gdb_history  12.thread.c  grep  thread  trabalho-1-2  trabalho-1-2.c  trabalho-1-2_example.c
2021.1/competitive-programming/: result.txt
2021.1/competitive-programming/week-1/: a.cost-cutting.cpp  b.event-planning  b.event-planning.cpp
2021.1/competitive-programming/week-2/: a.minesweeper  a.minesweeper.cpp  b.mother-bear  b.mother-bear.cpp  d.how-old-are-you  d.how-old-are-you.cpp  e.longest-nap  e.longest-nap.cpp  f.tic-tac-toe  f.tic-tac-toe.cpp  result.txt
2021.1/competitive-programming/week-4/: a.throwing-cards-away  a.throwing-cards-away.cpp
2021.1/multiplayer-gaming/: README.md
2021.1/multiplayer-gaming/serialization/: gamestate.json  serialization  serialization.c
2021.1/multiplayer-gaming/socket-tcp/: client.cpp  server.cpp
2021.1/multiplayer-gaming/socket-udp/: client.cpp  server.cpp
ITP-2018.2/: .directory  README.md
ITP-2018.2/lista01/: lista1.sh  q7.c
ITP-2018.2/lista02/: lista2.sh  lista2b.sh  q10.c  q2.c  q4.c
ITP-2018.2/lista03/: lista3.sh  q1.c  q11.c  q17.c  q19.c  q2.c  q20.c
ITP-2018.2/lista04/: q2-1.c  q4-0.c  q4-1.c  q6.c
ITP-2018.2/lista05/: lista5.sh  q1.c  q4.c
ITP-2018.2/lista06/: lista6.sh  q10.c  q8.c
ITP-2018.2/lista07/: lista7.sh  q11.c  q5.c  q7.c
ITP-2018.2/lista08/: lista8.sh  q10.c  q3.c  q6.c
ITP-2018.2/lista09/: aprovados.txt  fletters.txt  lista9.sh  q1.c  q5.c  voos.csv
ITP-2018.2/lista10/data_example/: data.c
ITP-2018.2/lista10/q1/: complexo.h
ITP-2018.2/lista11/: lista11.sh  q2.c
LP-I-2019.1/aula00/src/: main.cpp
(+137 files in other folders)
